# OTA

./: .gitmodules  CMakeLists.txt  Makefile
client/: .gitignore  CMakeLists.txt  Makefile  main.c  memmap.ld
client/cmake/: memmap.ld  memmap.template.ld  pico_flash_region_ota.template.ld
client/include/: device.h  dht22.h  lwipopts.h  ota.h  tcp.h
client/scripts/: generate_signing_key_header.sh  picoterm.sh
client/src/: device.c  dht22.c  ota.c  tcp.c
libota/: .gitignore  .target  CMakeLists.txt  Makefile  PROTOCOL  README.md  mbedtls_config.h  mbedtls_crypto_config.h
libota/cmake/: README.md  libota.pc.in  ota_ram_function.h.in  toolchain-pico.cmake
libota/include/: ota.h  ota_client.h  ota_client_builder.h  ota_client_internal.h  ota_common.h  ota_server.h  ota_server_builder.h  ota_server_internal.h  packet.h  platform.h  protocol.h  tls_context.h
libota/include/internal/: ota_client_internal.h  ota_common.h  ota_common_internal.h  ota_server_internal.h  packet.h  tls_context_internal.h
libota/include/libota/: ota_client.h  ota_client_builder.h  ota_common.h  ota_server.h  ota_server_builder.h  protocol.h  tls_context.h
libota/scripts/: build-pico.sh  build.sh  configure_mbedtls.sh  install.sh
libota/src/: ota.c  ota_client.c  ota_client_builder.c  ota_client_internal.c  ota_common.c  ota_common_internal.c  ota_server.c  ota_server_builder.c  ota_server_internal.c  packet.c  tls_context.c  tls_context_internal.c
scripts/: build.sh  clean.sh  generate_signing_keys.sh
server/: .gitignore  CMakeLists.txt  Makefile  main.cpp
server/include/: file_reader.h  file_wrapper.h  ota_server_wrapper.h  tcp_server.h
server/scripts/: generate_cert.sh  run.sh  tls_client.sh
server/src/: file_reader.cpp  ota_server_wrapper.cpp  tcp_server.cpp
